# software-raytracing

./: .gitignore  CMakeLists.txt  README.md
Sources/01_Basic/: CMakeLists.txt  Main.cpp  Plane.hpp  Types.h
Sources/02_SoftShadows/: CMakeLists.txt  Main.cpp  Sphere.hpp
Sources/03_BasicPathTracing/: CMakeLists.txt  Main.cpp  Materials.hpp  Sphere.hpp  Types.h
Sources/03_PathTracingBasics/: CMakeLists.txt  Main.cpp  Materials.hpp  Utils.h
Sources/04_PathTracingLights/: CMakeLists.txt  Main.cpp  Utils.h
Sources/04_PathTracingLights/Materials/: Diffuse.hpp  Light.hpp  Metal.hpp  Refractive.hpp
Sources/04_PathTracingLights/Scene/: Box.hpp  Plane.hpp  Rectangle.hpp  Sphere.hpp
Sources/Common/: ImageBuffer.hpp  Math.hpp  Ray.hpp
